<resources>
    <string name="app_name">SFK\'13</string>
    <string name="action_settings">Settings</string>
    <string name="Platinium">Platinium:</string>
	<string name="Gold">Gold:</string>
	<string name="Media">Media:</string>
	<string name="Facebook">Facebook</string>
	<string name="Refresh">Refresh</string>
	<string name="about_text3">\nLincensed under GPL v3.0. Source available at: https://github.com/flosskosova/SFK13-android-app </string>
	<string name="Developers">Developed by: \nArlind Hajredinaj and Jeton Ahmetaj  \narlind.hajredinaj@gmail.com\njeton.ahmetaj40@gmail.com</string>
	<string name="FirstPart">SFK (Software Freedom Kosova Conference) is the biggest annual nonprofit conference in Kosovo established to promote software freedom, open source software, free culture and open knowledge, a global movement that originally started more than 25 years ago.\n\nThe Conference gathers each year academics, users, developers and people who share the idea that software should be free and open for the community to develop and customize to its needs; that knowledge is a communal property and free and open to everyone.  Each year SFK succeeded in its mission; educating Kosovo youth on Free and Open Source Software, its ideology and the great community behind it. SFK conferences had great impact on creating strong bonds of friendship between the local community and foreign one.\n\nSFK provides a fertile ground to build and enhance networking within the tech community, both in the local region and worldwide by being used as a meeting point for a network of individuals and companies with the aim of sponsoring and initiating projects which benefit the people in Kosovo and which should also result in commercial benefits for the surrounding region.</string>
<string name="SecondPart">Available to both the general public and the technical community, SFK offer it’s attendees:\n\n

\u2022 Local/Regional/International and National networking for business and new friends worldwide.\n
\n\u2022 Hands-on training and in depth talks from local and international speakers with a focus on the following subjects:\n
   \n\u2022 Basics: What is Free and Open Source Software?\n
   \n\u2022 How it works: How open source software gets funded and made (e.g. IBM, Red Hat, etc.), how OSS communities operate, the beauty of sharing code and data to build a better future\n
   \n\u2022 Business: How can free and open source software help you develop your business?\n
   \n\u2022 Government: How can OSS support government goals and plans?  Open government data and open data formats for connecting with constituents.\n
   \n\u2022 Education: Advantages of free and open source software for Education?\n
   \n\u2022 Non-profit sector: How can public and private institutions benefit from free and open source software?\n
   \n\u2022 Use and Development: Tools, desktop environment and distros, languages, web/web 2.0, standards, multimedia and video production, communities, security, servers, system administration, networks, mobile, databases, cloud computing  and more.\n</string>
<string name="TitleTwo">Who is organizing SFK ?</string>
<string name="update_app">Do you want to check for updates?\n\n If updates are found, you will have to re-install the app manually.</string>
<string name="PartThree">Free Libre Open Source Software Kosova (FLOSSK) is a non-governmental non-profit organization established in order to support, promote and develop:</string>
<string name="PartFour">   \u2022 Free/Libre Software as defined by the</string>
<string name="LinkFour">2Free Software Foundation;</string>
<string name="PartFive">   \u2022 Open Source Software as defined by the</string>
<string name="LinkFive">Open Source Initiative;</string>
<string name="PartSix">   \u2022 Open and participatory knowledge as that supported by the :</string>
<string name="LinkSix">Wikimedia Foundation;</string>
<string name="PartSeven">   \u2022 Education in information technologies through open courses like those from :</string>
<string name="LinkSeven">MIT;</string>
<string name="PartEight">FLOSSK is the organizer of Software Freedom Kosova Conference for the fifth year now, gathering this way people who are interested in creating, developing or simply using free and open source software – based on code that can be altered by the users themselves.

\n\nFLOSSK’s website:</string>
<string name="LinkEight">  http://www.flossk.org</string>
<string name="TitleThree">A little History:</string>
<string name="PartNine">Since, an initiative to promote the plenty fold benefits of free software had not been undertaken until then, on September 2008, James Michael Dupont started an initiative to gather interested parties in the organization of the first Free and Open Source Software in Kosovo.

\n\nThe virtual event attracted around 600 people and this served as an incentive for a group of close-knit partner organizations to be built and start putting the conference into action.

\n\nOn March 22nd 2009, the first general assembly of what came to be called FLOSSK was held. The assembly set the aims and goals of the organization: focusing in gathering all IT and non-IT people interested in creating a single movement in creating a Free and Open Source Software community in Kosovo.</string>
<string name="firfoxos">The purpose of this workshop is to walk you through the Web API\'s in Firefox OS, the security model, the building blocks and get you on your way to creating your first Firefox OS application. Since we have a limited amount of phones available, we\'ll be using the Firefox OS simulator. Be sure to install it before attending, here is a download link: https://addons.mozilla.org/en-US/firefox/addon/firefox-os-simulator/\n
 
Be sure to have your preffered JavaScript IDE installed, if you don\'t already have one, here are a few cross-platform suggestions:\n\n

Aptana - http://www.aptana.com/products/studio3/download\n\n

Eclipse - http://www.eclipse.org/webtools/jsdt/\n\n
 

For testing purposes, it\'s better if you have a web server installed, anyone you want.\n\n
 

Be sure to register and don\'t forget to bring a laptop, I\'m afraid a tablet won\'t be useful for this workshop.</string>
<string name="emberjs">EmberJS is a JavaScript framework for building rich front-end application.  The workshop will guide you step-by-step on how to build a front-end app with EmberJS.\n\n

Requirements: You should know JavaScript and also have heard about MVC pattern.\n\n

Description:\n\n

\u2022EmberJS and what’s out there\n
\u2022Introduction of EmberJS\n
\u2022Main components in EmberJS\n
\u2022Templates\n
\u2022Router\n
\u2022Components\n
\u2022Models\n
\u2022Controllers\n
\u2022Starter kit\n
\u2022Building a application from scratch (front end)\n
\u2022Resources and more about EmberJS\n
\u2022Questions and answers\n
</string>
<string name="second_lecture">"The speech will include:

-How precious is the role of community, not just for users of the software, but for developers as well.

-How should community activity have impact on choosing the right software or “tools” to be used by the system administrators.

-How Open Source Software allows the community to develop their knowledge.

-How much freedom does Open Source Software offer and how can this freedom be best used from everyone.

-How important is the contribution of everyone to the community.

-How can local communities be built and to whom will the most responsibility fall for building local communities."</string>
<string name="ogp">"On 9 July, Kosovo Government announced its intention to join the Open Government Partnership (OGP). Launched in 2011, OGP is a multilateral initiative that aims to secure concrete commitments from governments to promote transparency, empower citizens, fight corruption, and harness new technologies to strengthen governance. 

It is an extension of hacker ethos to governance. 

To become a member of OGP, participating countries must deliver a country action plan developed with public consultation of civil society, businesses and government institutions. 

In his talk, Arianit will explain what OGP can mean for Kosovo and why and how you should get involved. 

The talk is likely to interest newcomers, especially girls and women, that are enthusiastic about contributing to FOSS, but it is not limited to professionals that might be interested in participating in the outreach programs as mentors."</string>
<string name="freelancing">The talk will be about how to get ready to start freelancing, set out and grow up through the experience. Also, it will mention how to take advantage of the skills one acquires while managing themselves to eventually start managing others and start a business.</string>
<string name="hackerspaces">In the \'early days\' online communities and projects were created, organized and developed at online forums, IRC channels, mailing lists, wikis and other platforms of knowledge sharing using the world wide web as their connectivity hub. 
These platforms were the foreground of the collaborative and hacking culture and played a crucial role in the development of project such as Linux, Wikipedia, Creative Commons and more. After a while hackers realized that physical collaboration was even more effective than talking and working behind a screen. The need for real world meetings, in combination with the raise of the maker culture and the evolution of hardware hacking platforms such as Arduino, created the ideal foundations for the opening of the first physical venues called hackerspaces. 
Hackerspaces are a community-operated workspace where people with common interests, often in computers, technology, science, digital art or electronic art, can meet, socialize and/or collaborate. With these foundations in mind, Open Labs Albania (www.openlabs.cc) joined the hackerspaces movement in 2010 by hosting projections, events, hacknights and weekly gatherings where members and participants work together using free software, experiment with 3D printing and other hardware, collaborate with regional organizations and function as a hub of different projects of the local open knowledge community.  
One of the projects of the hackerspace is also WMKIT (www.wemakeit.co), an affordable educational hardware kit based on Arduino standarts that helps you make the first steps in controlling the world using microcontrollers, sensors, electronics and programing. The kit has great feedback so far not only in Albania, but also in Europe where workshops are held at the moment. The most important element of the WMKIT project though is the importance of sharing the projects and solutions we produce at our hackerspaces with the world and the people that need these solutions. This is what this talk is all about, closing the innovations gap... 

</string>
<string name="flamur">An enthusiastic web developer, with a lot of experience in different areas, in love with open source even that he uses Windows most of the time, contributor on different open source projects, started his own company when he was 18 and has worked both in public and private sectors. He has been working for some large Norwegian companies such as Nettby Community AS a part of VG Multimedia AS, Akershus County Council, Holte byggsafe AS, NETS (one of the largest payment solutions in north) by developing and designing their products.</string>
</resources>