<?xml version="1.0" encoding="utf-8"?>
 <ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#141414">
    <RelativeLayout 
         android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#141414"
        >
        
        <TextView 
         android:id="@+id/textViewTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="ABOUT"
         android:textStyle="bold"
         android:textSize="20sp"
         android:layout_margin="10dp"
         android:gravity="center"
         android:textColor="@color/SfkC"
         />
        <TextView
         android:id="@+id/textViewPartOne"
         android:layout_below="@+id/textViewTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:text="@string/FirstPart"
         android:textColor="@color/White"
         android:padding="10dp"
         >
         
     </TextView>
     <TextView 
         	 android:id="@+id/textViewPartTwo"
         android:layout_below="@+id/textViewPartOne"
       
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/SecondPart"
         android:textColor="@color/White"
         android:padding="10dp"
         />
     <TextView 
         android:id="@+id/textViewTitleTwo"
         android:layout_below="@+id/textViewPartTwo"
       	 android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/TitleTwo"
         android:textColor="@color/SfkC"
         android:textStyle="bold"
         android:padding="10dp"
         android:gravity="center"
         android:textSize="20sp"
         />
     <TextView 
         android:id="@+id/textViewPartThree"
         android:layout_below="@+id/textViewTitleTwo"
       	 android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/PartThree"
         android:textColor="@color/White"
         android:padding="10dp"
         />
     
     <TextView 
         android:id="@+id/textViewPartFour"
         android:layout_below="@+id/textViewPartThree"
       	 android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/PartFour"
         android:textColor="@color/White"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:paddingTop="10dp"
        
         />
      <TextView 
         android:id="@+id/textViewLinkFour"
         android:layout_below="@+id/textViewPartFour"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/LinkFour"
         android:textColor="@color/SfkC"
         android:paddingLeft="10dp"
         android:background="@drawable/image_click"
         />
    <TextView 
         android:id="@+id/textViewPartFive"
         android:layout_below="@+id/textViewPartFour"
       	 android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/PartFive"
         android:textColor="@color/White"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:paddingTop="10dp"
         android:layout_marginTop="10dp"
        />
    <TextView 
         android:id="@+id/textViewLinkFive"
         android:layout_below="@+id/textViewPartFive"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/LinkFive"
         android:textColor="@color/SfkC"
         android:paddingLeft="10dp"
         android:background="@drawable/image_click"
         />
    <TextView 
         android:id="@+id/textViewPartSix"
         android:layout_below="@+id/textViewPartFive"
       	 android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/PartSix"
         android:textColor="@color/White"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:paddingTop="10dp"
         android:layout_marginTop="10dp"
        />
    <TextView 
         android:id="@+id/textViewLinkSix"
         android:layout_below="@+id/textViewPartSix"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/LinkSix"
         android:textColor="@color/SfkC"
         android:paddingLeft="10dp"
         android:background="@drawable/image_click"
         />
    <TextView 
         android:id="@+id/textViewPartSeven"
         android:layout_below="@+id/textViewPartSix"
       	 android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/PartSeven"
         android:textColor="@color/White"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:paddingTop="10dp"
         android:layout_marginTop="10dp"
        />
    <TextView 
         android:id="@+id/textViewLinkSeven"
         android:layout_below="@+id/textViewPartSeven"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/LinkSeven"
         android:textColor="@color/SfkC"
         android:paddingLeft="10dp"
         android:background="@drawable/image_click"
         />
     <TextView 
         android:id="@+id/textViewPartEight"
         android:layout_below="@+id/textViewPartSeven"
       	 android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/PartEight"
         android:textColor="@color/White"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:paddingTop="20dp"
         android:layout_marginTop="10dp"
        />
    <TextView 
         android:id="@+id/textViewLinkEight"
         android:layout_below="@+id/textViewPartEight"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/LinkEight"
         android:textColor="@color/SfkC"
         android:paddingLeft="10dp"
         android:background="@drawable/image_click"
         />
    <TextView 
         android:id="@+id/textViewTitleThree"
         android:layout_below="@+id/textViewLinkEight"
       	 android:layout_width="match_parent"
         android:layout_height="wrap_content"
          android:textStyle="bold"
         android:textSize="20sp"
         android:text="@string/TitleThree"
         android:textColor="@color/SfkC"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:paddingTop="10dp"
         android:layout_marginTop="10dp"
         android:gravity="center"
        />
    <TextView 
         android:id="@+id/textViewPartNine"
         android:layout_below="@+id/textViewTitleThree"
       	 android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/PartNine"
         android:textColor="@color/White"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:paddingTop="10dp"
         android:layout_marginTop="10dp"
        />
    </RelativeLayout>
     
    
</ScrollView>


