<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    >
    
    

<TableLayout
    
   
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:stretchColumns="*"
    >
    <TableRow 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView 
            android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/Platinium"
        	android:textSize="15dp"
        	android:textColor="@color/Black"
        	android:gravity="center"
            />
    </TableRow>
    <TableRow 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
       <ImageView 
           android:padding="5dp"
            android:id="@+id/imageViewIpkoFoundation"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="50dp"
            android:src="@drawable/ipko_foundation"
            android:background="@drawable/image_click"
            />
            
    </TableRow>

     <TableRow 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
				<ImageView
				 android:id="@+id/imageViewICK"
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
                 android:src="@drawable/ick_logo"
                 android:background="@drawable/image_click" />
      
    </TableRow>
    
     <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="5dp"
            android:text="@string/Gold"
            android:textColor="@color/Black"
            
            android:textSize="15dp" />
     <TableRow 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

         <ImageView
             android:id="@+id/imageViewILAB"
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_margin="10dp"
             android:src="@drawable/ilab" 
              android:background="@drawable/image_click"/>
        
     </TableRow>
     <TableRow 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView 
            
            android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/Media"
        	android:textSize="15dp"
        	android:textColor="@color/Black"
        	android:gravity="center"
        	 android:background="@drawable/image_click"
            />
    </TableRow>
     <TableRow 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView 
            android:id="@+id/imageViewDigjitale"
            android:layout_width="wrap_content"
            android:layout_margin="10dp"
            android:layout_height="70dp"
            android:src="@drawable/digjitale"
             android:background="@drawable/image_click"
             android:layout_marginBottom="10dp"
            />
        
     </TableRow>
</TableLayout>
</ScrollView>